objects/Product_Feature_Version__c.object
<CustomObject>
    <description>Used by Support in R2</description>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Feature Versions</relationshipLabel>
        <relationshipName>Feature_Versions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Feature_Version_Number__c</fullName>
        <displayFormat>PFV-{000000}</displayFormat>
        <label>Product Feature Version Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Product_Feature__c</fullName>
        <label>Product Feature</label>
        <referenceTo>Product_Feature__c</referenceTo>
        <relationshipLabel>Product Feature Versions</relationshipLabel>
        <relationshipName>Product_Feature_Versions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Row_Id_Transition__c</fullName>
        <formula>IF( isMigrated_Record__c , Row_Id__c, Product_Feature_Version_Number__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Row Id Transition</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Row_Id__c</fullName>
        <externalId>true</externalId>
        <label>Row Id</label>
        <length>15</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>isActive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isMigrated_Record__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Migrated Record</label>
        <type>Checkbox</type>
    </fields>
    <label>Product Feature Version</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Product Feature Version Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Feature Versions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>